# sspo-impl

./: .gitignore  pyproject.toml  tasks.py
matlab/: ProximalOperators.m  exercise2.m  exercise3.m  exercise4.m  exercise5.m
matlab/practice/: graphSignalProcessing.m  hyperspectralImage.m
matlab/practice/lib/difference_operator/: Dvh.m  Dvht.m
matlab/practice/lib/prox/: Prox_l1.m
python/: exercise3-ex.py  hyperspectral_image.py  main.py
