[tool.poetry]
name = "exercise"
version = "0.1.0"
description = ""
authors = ["kryInit <kryinit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
scikit-image = "^0.23.1"
invoke = "^2.2.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
